Fixed Builder tests Added some JavaDoc JavaReflect and Nomnoml and AssertionsTypes